fix: h2, swagger 접속 불가 현상 수정